--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library(wayland_window STATIC
     wayland_client.cpp
     wayland_surface_buffer.cpp
     wayland_surface.cpp
-    wayland_deleters.cpp
+    wayland_types.cpp
     wayland_cursor.cpp
     window.cpp
     utils/logger.cpp
@@ -59,3 +59,7 @@ target_sources(wayland_window
         ${WL_PROT_SRC}
         ${WL_DEC_PROT_SRC}
 )
+
+
+add_subdirectory(events)
+target_link_libraries(wayland_window events)
