Refactor WaylandClient initialization and enhance build system & documentation
- Consolidate all protocol interface bindings in WaylandClients constructor
- Remove the old free-standing bind_to_registry helper and add an initial display round-trip check with error reporting
- Introduce custom CMake Find modules for Wayland client, cursor, protocols, and xkbcommon
- Simplify and reorganize CMakeLists to use the new Find modules and streamline target linking
- Revamp README with dependency requirements, detailed build/run instructions, and testing guidelines

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,42 +24,29 @@ target_include_directories(wayland_window
 target_include_directories(wayland_window 
     PRIVATE 
         ${CMAKE_CURRENT_SOURCE_DIR}/
+        ${CMAKE_CURRENT_BINARY_DIR}
 )
+
+# Add cmake/ to CMAKE_MODULE_PATH for custom find modules
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 
 # Find and link the Wayland client library
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(wayland-client REQUIRED wayland-client)
-pkg_check_modules(wayland-cursor REQUIRED wayland-cursor)
-target_link_libraries(wayland_window ${wayland-client_LIBRARIES})
-target_link_libraries(wayland_window ${wayland-cursor_LIBRARIES})
+find_package(WaylandClient REQUIRED)
+find_package(WaylandCursor REQUIRED)
+find_package(XKBCommon REQUIRED)
+find_package(WaylandProtocols REQUIRED)
 
-pkg_check_modules(xkbcommon REQUIRED xkbcommon)
-target_link_libraries(wayland_window ${xkbcommon_LIBRARIES})
-
-find_package(ECM REQUIRED)
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ECM_FIND_MODULE_DIR})
-# Use Wayland scanner to generate protocol files (header and source) from the Wayland XML specification
-find_program(WAYLAND_SCANNER NAMES wayland-scanner)
-
-execute_process(COMMAND pkg-config wayland-protocols --variable=pkgdatadir
-    OUTPUT_VARIABLE WAYLAND_PROTOCOLS_DIR
-    OUTPUT_STRIP_TRAILING_WHITESPACE)
-
-find_package(WaylandScanner REQUIRED)
-ecm_add_wayland_client_protocol(WL_PROT_SRC
-    PROTOCOL ${WAYLAND_PROTOCOLS_DIR}/stable/xdg-shell/xdg-shell.xml
-    BASENAME xdg-shell)
-ecm_add_wayland_client_protocol(WL_DEC_PROT_SRC
-    PROTOCOL ${WAYLAND_PROTOCOLS_DIR}/unstable/xdg-decoration/xdg-decoration-unstable-v1.xml
-    BASENAME xdg-decoration-unstable-v1)
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-
-target_sources(wayland_window
-    PRIVATE
-        ${WL_PROT_SRC}
-        ${WL_DEC_PROT_SRC}
-)
-
+target_include_directories(wayland_window 
+    PRIVATE 
+        ${WAYLAND_CLIENT_INCLUDE_DIRS} 
+        ${WAYLAND_CURSOR_INCLUDE_DIRS} 
+        ${XKB_COMMON_INCLUDE_DIRS}
+        ${WAYLAND_PROTOCOLS_INCLUDE_DIRS})
+target_link_libraries(wayland_window 
+    ${WAYLAND_CLIENT_LIBRARIES} 
+    ${WAYLAND_CURSOR_LIBRARIES} 
+    ${XKB_COMMON_LIBRARIES}
+    ${WAYLAND_PROTOCOLS_LIBRARIES})
 
 add_subdirectory(events)
 target_link_libraries(wayland_window events)
