--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,27 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 
+# Option to enable/disable documentation generation
+option(WAYLAND_EXAMPLE_BUILD_DOCS "Build documentation with Doxygen" ON)
+
+if(WAYLAND_EXAMPLE_BUILD_DOCS)
+    find_package(Doxygen QUIET)
+    if(DOXYGEN_FOUND)
+        set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
+        set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
+
+        configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
+
+        add_custom_target(doc_doxygen
+            COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
+            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+            COMMENT "Generating API documentation with Doxygen"
+            VERBATIM)
+    else()
+        message(WARNING "Doxygen not found, documentation target will not be available.")
+    endif()
+endif()
+
 add_subdirectory(example)
 add_subdirectory(src)
 add_subdirectory(tests)
