Refactor wayland seat/keyboard/pointer to inputmanager class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_library(wayland_window STATIC
     wayland_window.cpp
     window_registry.cpp
+    wayland_input_manager.cpp
     wayland_client.cpp
     wayland_surface_buffer.cpp
     wayland_surface.cpp
@@ -25,6 +26,11 @@ target_include_directories(wayland_window
     PRIVATE 
         ${CMAKE_CURRENT_SOURCE_DIR}/
         ${CMAKE_CURRENT_BINARY_DIR}
+)
+
+set_target_properties(wayland_window PROPERTIES
+    CXX_STANDARD 23
+    CXX_STANDARD_REQUIRED YES
 )
 
 # Add cmake/ to CMAKE_MODULE_PATH for custom find modules
